<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".fragment.OutputFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_user_choice"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/lbl_user_choice"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/lbl_cpu_choice"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/lbl_user_choice"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/lbl_winner"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/lbl_draw"
        android:textColor="@color/grey_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnReplay"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/lbl_replay"
        android:textAllCaps="false"
        android:textSize="12dp"></Button>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/grey"></View>

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/lbl_play_again"
        android:textAllCaps="false"
        android:textSize="14dp"></Button>
</LinearLayout>